# backend/internal/api/oas_response_encoders_gen.go
@@ -122,6 +122,20 @@ func encodeDeleteRecordResponse(response DeleteRecordRes, w http.ResponseWriter,
 	}
 }
 
+func encodeGetOidcConfigResponse(response *OIDCConfigResponse, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeGetRecommendResponse(response GetRecommendRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *RecommendResult:
